fix: Fix 1.20.6 port bugs